# beeflow_ai

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  json_schema_validator.py  loader.py  openai_chat_completition_client.py  pyproject.toml
.github/workflows/: tests.yml
generator/: poker_feedback_generator.py
prompt_builder/: __init__.py  poker_feedback_prompt_builder.py
tests/: test_json_schema_validator.py  test_openai_client.py  test_poker_feedback_generator.py  test_poker_feedback_prompt_builder.py  test_registry.py
